--- a/mengxuegu-security-parent/mengxuegu-security-web/src/main/resources/templates/login.html
+++ b/mengxuegu-security-parent/mengxuegu-security-web/src/main/resources/templates/login.html
@@ -53,9 +53,9 @@
           <div class="col-6">
               <input name="code" type="text" class="form-control" placeholder="验证码">
           </div>
-          <!--<div class="col-6">
+          <div class="col-6">
             <img onclick="this.src='/code/image?'+Math.random()" src="/code/image" alt="验证码"   />
-          </div>-->
+          </div>
         </div>
 
         <div th:if="${param.error}">
